--- a/steamapps/common/Half-Life/cstrike/userconfig.cfg
+++ b/steamapps/common/Half-Life/cstrike/userconfig.cfg
@@ -7,12 +7,12 @@ bind "," "buyammo1"
 bind "." "buyammo2"
 bind "/" "+movedown"
 bind "0" "slot10"
-bind "1" "slot1;usp;defuser;buyammo2;buyammo2;buyammo2;hegren;flash;flash;sgren;vesthelm"
-bind "2" "slot2;ak47;m4a1;buyammo1;buyammo1"
-bind "3" "slot3;aug;sg552;buyammo1;buyammo1"
-bind "4" "slot4;famas;galil;buyammo1;buyammo1"
-bind "5" "slot5;mp5;buyammo1;buyammo1"
-bind "6" "slot6;awp;buyammo1;buyammo1"
+bind "1" "slot1;usp;weapon_usp;defuser;buyammo2;buyammo2;buyammo2;hegren;flash;flash;sgren;vesthelm"
+bind "2" "slot2;ak47;m4a1;weapon_ak47;weapon_m4a1;buyammo1;buyammo1"
+bind "3" "slot3;aug;sg552;weapon_aug;weapon_sg552;buyammo1;buyammo1"
+bind "4" "slot4;famas;galil;weapon_famas;weapon_galil;buyammo1;buyammo1"
+bind "5" "slot5;mp5;weapon_mp5;buyammo1;buyammo1"
+bind "6" "slot6;awp;weapon_awp;buyammo1;buyammo1"
 bind ";" "+mlook"
 bind "[" "invprev"
 bind "]" "invnext"
@@ -54,12 +54,12 @@ bind "PGUP" "slot3"
 bind "HOME" "slot2"
 bind "END" "slot5"
 bind "KP_HOME" "buyammo2"
-bind "KP_LEFTARROW" "hegren"
-bind "KP_5" "sgren"
+bind "KP_LEFTARROW" "hegren;weapon_hegrenade"
+bind "KP_5" "sgren;weapon_smokegrenade"
 bind "KP_RIGHTARROW" "buyammo1"
 bind "KP_END" "vest"
 bind "KP_DOWNARROW" "vesthelm"
-bind "KP_PGDN" "flash;flash"
+bind "KP_PGDN" "flash;flash;weapon_flashbang"
 bind "MWHEELDOWN" "invnext"
 bind "MWHEELUP" "invprev"
 bind "MOUSE1" "+attack"
