do not switch to grenades

--- a/steamapps/common/Half-Life/cstrike/userconfig.cfg
+++ b/steamapps/common/Half-Life/cstrike/userconfig.cfg
@@ -54,12 +54,12 @@ bind "PGUP" "slot3"
 bind "HOME" "slot2"
 bind "END" "slot5"
 bind "KP_HOME" "buyammo2"
-bind "KP_LEFTARROW" "hegren;weapon_hegrenade"
-bind "KP_5" "sgren;weapon_smokegrenade"
+bind "KP_LEFTARROW" "hegren"
+bind "KP_5" "sgren"
 bind "KP_RIGHTARROW" "buyammo1"
 bind "KP_END" "vest"
 bind "KP_DOWNARROW" "vesthelm"
-bind "KP_PGDN" "flash;flash;weapon_flashbang"
+bind "KP_PGDN" "flash;flash"
 bind "MWHEELDOWN" "invnext"
 bind "MWHEELUP" "invprev"
 bind "MOUSE1" "+attack"
