--- a/steamapps/common/Half-Life/cstrike/config.cfg
+++ b/steamapps/common/Half-Life/cstrike/config.cfg
@@ -9,12 +9,12 @@ bind "," "buyammo1"
 bind "." "buyammo2"
 bind "/" "+movedown"
 bind "0" "slot10"
-bind "1" "slot1;usp;defuser;buyammo2;buyammo2;buyammo2;hegren;flash;flash;sgren;vesthelm"
-bind "2" "slot2;ak47;m4a1;buyammo1;buyammo1"
-bind "3" "slot3;aug;sg552;buyammo1;buyammo1"
-bind "4" "slot4;famas;galil;buyammo1;buyammo1"
-bind "5" "slot5;mp5;buyammo1;buyammo1"
-bind "6" "slot6;awp;buyammo1;buyammo1"
+bind "1" "slot1;usp;weapon_usp;defuser;buyammo2;buyammo2;buyammo2;hegren;flash;flash;sgren;vesthelm"
+bind "2" "slot2;ak47;m4a1;weapon_ak47;weapon_m4a1;buyammo1;buyammo1"
+bind "3" "slot3;aug;sg552;weapon_aug;weapon_sg552;buyammo1;buyammo1"
+bind "4" "slot4;famas;galil;weapon_famas;weapon_galil;buyammo1;buyammo1"
+bind "5" "slot5;mp5;weapon_mp5;buyammo1;buyammo1"
+bind "6" "slot6;awp;weapon_awp;buyammo1;buyammo1"
 bind ";" "+mlook"
 bind "[" "invprev"
 bind "]" "invnext"
@@ -61,7 +61,7 @@ bind "KP_5" "sgren"
 bind "KP_RIGHTARROW" "buyammo1"
 bind "KP_END" "vest"
 bind "KP_DOWNARROW" "vesthelm"
-bind "KP_PGDN" "flash;flash"
+bind "KP_PGDN" "flash"
 bind "MWHEELDOWN" "invnext"
 bind "MWHEELUP" "invprev"
 bind "MOUSE1" "+attack"
@@ -132,7 +132,7 @@ gl_round_down "3"
 gl_spriteblend "1"
 gl_texturemode "GL_LINEAR_MIPMAP_LINEAR"
 gl_vsync "1"
-gl_wateramp "0.3"
+gl_wateramp "0"
 graphheight "64.0"
 hisound "1"
 hpk_maxsize "4"
@@ -180,7 +180,7 @@ spec_autodirector_internal "1"
 spec_drawcone_internal "1"
 spec_drawnames_internal "1"
 spec_drawstatus_internal "1"
-spec_mode_internal "2"
+spec_mode_internal "4"
 spec_pip "0"
 suitvolume "0.250000"
 sv_aim "0"
@@ -203,5 +203,4 @@ setinfo "_vgui_menus" "1"
 setinfo "_ah" "1"
 +mlook
 +jlook
-echo "'config.cfg' loaded..."
 exec userconfig.cfg
