increase rate, only use one character model, only buy one flashbang

--- a/steamapps/common/Half-Life/cstrike/config.cfg
+++ b/steamapps/common/Half-Life/cstrike/config.cfg
@@ -61,7 +61,7 @@ bind "KP_5" "sgren"
 bind "KP_RIGHTARROW" "buyammo1"
 bind "KP_END" "vest"
 bind "KP_DOWNARROW" "vesthelm"
-bind "KP_PGDN" "flash"
+bind "KP_PGDN" "flash;flash"
 bind "MWHEELDOWN" "invnext"
 bind "MWHEELUP" "invprev"
 bind "MOUSE1" "+attack"
@@ -95,7 +95,7 @@ cl_logofile "smiley"
 cl_lw "0"
 cl_min_ct "2"
 cl_min_t "1"
-cl_minmodels "0"
+cl_minmodels "1"
 cl_mousegrab "1"
 cl_radartype "0"
 cl_righthand "0"
@@ -167,7 +167,7 @@ net_graph "0"
 net_graphpos "1"
 net_scale "5"
 r_detailtextures "0"
-rate "2500.000000"
+rate "30000"
 room_off "0"
 scoreboard_shortheaders "0"
 scoreboard_showavatars "1"
@@ -203,4 +203,5 @@ setinfo "_vgui_menus" "1"
 setinfo "_ah" "1"
 +mlook
 +jlook
+echo "'config.cfg' loaded..."
 exec userconfig.cfg
