--- a/steamapps/common/Half-Life/cstrike/userconfig.cfg
+++ b/steamapps/common/Half-Life/cstrike/userconfig.cfg
@@ -177,6 +177,7 @@ spec_drawcone_internal "1"
 spec_drawnames_internal "1"
 spec_drawstatus_internal "1"
 spec_mode_internal "4"
+spec_mode "4"
 spec_pip "0"
 suitvolume "0.250000"
 sv_aim "0"
