indent by one comment sign

--- a/steamapps/common/Half-Life/cstrike/userconfig.cfg
+++ b/steamapps/common/Half-Life/cstrike/userconfig.cfg
@@ -108,17 +108,17 @@ cl_logofile "smiley"
 cl_lw "0"
 cl_minmodels "1"
 // cl_min_ct
-// 2: GIGN
-// 4: GSG-9
-// 7: SAS
-// 9: SEAL
-// 10: Spetsnaz (CZ)
+//// 2: GIGN
+//// 4: GSG-9
+//// 7: SAS
+//// 9: SEAL
+//// 10: Spetsnaz (CZ)
 // cl_min_t
-/// 1: Elite
-/// 5: Guerilla
-/// 6: Arctic
-/// 8: Phoenix
-/// 11: Militia (CZ)
+//// 1: Elite
+//// 5: Guerilla
+//// 6: Arctic
+//// 8: Phoenix
+//// 11: Militia (CZ)
 cl_min_t "8"
 cl_min_ct "9"
 cl_radartype "0"
