--- a/steamapps/common/Half-Life/cstrike/userconfig.cfg
+++ b/steamapps/common/Half-Life/cstrike/userconfig.cfg
@@ -100,6 +100,7 @@ cl_dlmax "128"
 cl_download_ingame "1"
 cl_dynamiccrosshair "0"
 cl_forwardspeed "400"
+cl_filterstuffcmd "1"
 cl_himodels "0"
 cl_idealpitchscale "0.8"
 cl_lc "1"
