--- a/steamapps/common/Half-Life/cstrike/userconfig.cfg
+++ b/steamapps/common/Half-Life/cstrike/userconfig.cfg
@@ -112,14 +112,12 @@ cl_minmodels "1"
 //// 2: GIGN
 //// 4: GSG-9
 //// 7: SAS
-//// 9: SEAL
-//// 10: Spetsnaz (CZ)
+//// 9: Seal team 6
 // cl_min_t
-//// 1: Elite
-//// 5: Guerilla
-//// 6: Arctic
-//// 8: Phoenix
-//// 11: Militia (CZ)
+//// 1: Elite crew
+//// 5: Guerilla warfare
+//// 6: Arctic avengers
+//// 8: Phoenix connexion
 cl_min_t "8"
 cl_min_ct "9"
 cl_radartype "0"
