use highest 'cmdrate', use highest 'updaterate', let 'ex_interp' determine the value automatically, use highest 'rate'

--- a/steamapps/common/Half-Life/cstrike/userconfig/userconfig.cfg
+++ b/steamapps/common/Half-Life/cstrike/userconfig/userconfig.cfg
@@ -91,7 +91,7 @@ cl_allowdownload "1"
 cl_allowupload "1"
 cl_backspeed "400"
 cl_cmdbackup "2"
-cl_cmdrate "75"
+cl_cmdrate "105"
 cl_corpsestay "800"
 cl_crosshair_color "255 255 255"
 cl_crosshair_size "small"
@@ -124,7 +124,8 @@ cl_radartype "0"
 cl_righthand "0"
 cl_shadows "1"
 cl_timeout "35"
-cl_updaterate "20"
+cl_updaterate "100"
+ex_interp "0"
 cl_vsmoothing "0.05"
 cl_weather "1"
 con_color "255 180 30"
@@ -166,6 +167,7 @@ net_graphpos "1"
 net_scale "5"
 r_bmodelhighfrac "5.0"
 r_detailtextures "0"
+rate "20000"
 s_a3d "0.0"
 s_automax_distance "30"
 s_automin_distance "2"
