set spray logo to 'v_1', set the colour to 'grey'

--- a/steamapps/common/Half-Life/cstrike/userconfig/userconfig.cfg
+++ b/steamapps/common/Half-Life/cstrike/userconfig/userconfig.cfg
@@ -104,8 +104,32 @@ cl_filterstuffcmd "1"
 cl_himodels "0"
 cl_idealpitchscale "0.8"
 cl_lc "1"
-cl_logocolor "#Valve_Green"
-cl_logofile "smiley"
+// cl_logocolor
+//// #Valve_Blue
+//// #Valve_Brown
+//// #Valve_Dkgray
+//// #Valve_Ltblue
+//// #Valve_Ltgray
+//// #Valve_Green
+//// #Valve_Orange
+//// #Valve_Red
+//// #Valve_Yellow
+cl_logocolor "#Valve_Ltgray"
+// cl_logofile
+//// 8ball1
+//// andre
+//// camp1
+//// chick1
+//// chuckskull
+//// devl1
+//// gun1
+//// lambda
+//// skull
+//// smiley
+//// splatt
+//// tiki
+//// v_1
+cl_logofile "v_1"
 cl_lw "0"
 cl_minmodels "1"
 // cl_min_ct
