add radio messages

--- a/steamapps/common/Half-Life/cstrike/userconfig/userconfig.cfg
+++ b/steamapps/common/Half-Life/cstrike/userconfig/userconfig.cfg
@@ -54,7 +54,9 @@ bind "t" "impulse 201"
 bind "u" "messagemode2"
 bind "v" "+speed"
 bind "w" "+forward"
+bind "x" "radio2"
 bind "y" "messagemode"
+bind "z" "radio1"
 bind "~" "toggleconsole"
 bind "LEFTARROW" "slot8"
 bind "RIGHTARROW" "slot9"
